Make sure the contents of the info sections do not overflow their containers.

--- a/branding/style/branding.css
+++ b/branding/style/branding.css
@@ -438,6 +438,7 @@ div.section {
 
 div.column-info {
     max-width: 45vw;
+	word-wrap: break-word;
 }
 
 div.column-links div.section div.contents {
